--- a/index.html
+++ b/index.html
@@ -44,23 +44,23 @@
                 <h4>nov 28</h4>
             </div>
             <div class="small-6 large-2 columns counter">
-                <h4><span id="days"></span></h4>
+                <h4><span id="days">&nbsp;</span></h4>
                 <p>days</p>
             </div>
             <div class="small-6 large-2 columns counter">
-                <h4><span id="hours"></span></h4>
+                <h4><span id="hours">&nbsp;</span></h4>
                 <p>hours</p>
             </div>
             <div class="small-6 large-2 columns counter">
-                <h4><span id="minutes"></span></h4>
+                <h4><span id="minutes">&nbsp;</span></h4>
                 <p>minutes</p>
             </div>
             <div class="small-6 large-2 columns counter">
                 <h4 id="seconds">
                     &nbsp; <!-- the nbsp is required -->
-                    <span id="tick"></span>
-                    <span id="tock"></span>
-                    <span id="tack"></span>
+                    <span id="tick">&nbsp;</span>
+                    <span id="tock">&nbsp;</span>
+                    <span id="tack">&nbsp;</span>
                 </h4>
                 <p>seconds</p>
             </div>
