--- a/aug2013.html
+++ b/aug2013.html
@@ -267,7 +267,7 @@
             <ul class="grid small-block-grid-2 large-block-grid-4">
                 
                 <li>
-                    <a href="./jul2013.html" data-bottom="transform:rotate(360deg) scale(0)" data--100-bottom="transform:rotate(0deg) scale(1)">
+                    <a href="./jul2013.html" data-bottom="transform:rotate(360deg) scale(0)" data--150-bottom="transform:rotate(0deg) scale(1)">
                         <span class="version">
                             1<sup>st</sup> edition
                         </span>
@@ -331,6 +331,7 @@
                 <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
                 <a rel="nofollow" target="_blank" href="//foundation.zurb.com">Zurb Foundation</a>,
                 <a rel="nofollow" target="_blank" href="//github.com/Prinzhorn/skrollr">Skrollr</a>,
+                <a rel="nofollow" target="_blank" href="//daneden.me/animate/">Animate</a>,
                 <a rel="nofollow" target="_blank" href="//nanoc.ws">Nanoc</a> &amp;
                 <a rel="nofollow" target="_blank" href="//fontello.com">Fontello</a>
             </small></p>
