--- a/aug2013.html
+++ b/aug2013.html
@@ -264,14 +264,12 @@
 
     <div class="row">
         <div class="large-12 columns">
-            <ul class="grid small-block-grid-2 large-block-grid-4">
+            <ul class="grid small-block-grid-3 large-block-grid-6">
                 
                 <li>
                     <a href="./jul2013.html" data-bottom="transform:rotate(360deg) scale(0)" data--150-bottom="transform:rotate(0deg) scale(1)">
-                        <span class="version">
-                            1<sup>st</sup> edition
-                        </span>
-                        <span class="date">Jul 25</span>
+                        <h6>Jul</h6>
+                        <h3>25</h3>
                     </a>
                 </li>
                 
