More transitions/effects

--- a/aug2013.html
+++ b/aug2013.html
@@ -241,15 +241,13 @@
     </div>
 
     <div class="row">
-        <div class="large-12 columns" data-anchor-target="#_about"
-             data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0"
-             data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">
+        <div class="large-12 columns" data-anchor-target="#_about">
             <blockquote>
-                <p>Geek Night is a monthly event to promote sharing of technical knowledge and increase collaboration between geeks in Chennai. It is organized by a passionate group of programmers and sponsored by ThoughtWorks.</p>
+                <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)">Geek Night is a monthly event to promote sharing of technical knowledge and increase collaboration between geeks in Chennai. It is organized by a passionate group of programmers and sponsored by ThoughtWorks.</p>
 
-                <p id="_about"><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
+                <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
 
-                <cite>Geek Night Volunteers</cite>
+                <cite data--100-bottom-top="transform:translateX(100%)" data--100-bottom="transform:translateX(0)">Geek Night Volunteers</cite>
             </blockquote>
         </div>
     </div>
@@ -267,9 +265,12 @@
             <ul class="grid small-block-grid-3 large-block-grid-6">
                 
                 <li>
-                    <a href="./jul2013.html" data-bottom="transform:rotate(360deg) scale(0)" data--150-bottom="transform:rotate(0deg) scale(1)">
+                    <a href="./jul2013.html" data-bottom="transform:rotate(-90deg) scale(.5);opacity:0;transform-origin:-50% 100%" data--150-bottom="transform:rotate(0deg) scale(1);opacity:1">
                         <h6>Jul</h6>
-                        <h3>25</h3>
+                        <h3>
+                            25
+                            <span>2013</span>
+                        </h3>
                     </a>
                 </li>
                 
@@ -323,7 +324,7 @@
     <div class="row">
         <div class="large-12 columns">
             <p><small>
-                Geek Night Chennai sponsored by
+                <a href=".'/">Geek Night Chennai</a> sponsored by
                 <a rel="nofollow" target="_blank" href="//thoughtworks.com">ThoughtWorks</a><br />
                 Built with
                 <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
