Update my talk with resource

--- a/generator/content/oct2013.html
+++ b/generator/content/oct2013.html
@@ -12,6 +12,10 @@ agenda:
     speaker: "Selvakumar Natesan"
     profile: "//twitter.com/selvakn"
     image: "selvakn.jpg"
+    resources:
+      -
+        title: "Presentation"
+        url: "https://speakerdeck.com/selvakn/ways-to-sync-data-in-mobile-android"
   -
     time: "6:45"
     title: "Demystifying Apache Drill"
