Added participate/talk links for nov

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,8 +1,8 @@
 ---
 start: 2013-11-28 17:30
 edition: 5
-talk: "http://info.thoughtworks.com/geek_night_chennai_october_29_speaker_registration.html"
-participate: "javascript:void(0)"
+talk: "http://info.thoughtworks.com/GeekNight-Chennai-November-28-Speaker-Registration.html"
+participate: "http://info.thoughtworks.com/GeekNight-Chennai-November-28-Attendee-Registration.html"
 agenda:
   -
     time: "5:45"
