--- a/nov2013.html
+++ b/nov2013.html
@@ -217,8 +217,7 @@
                 <p>A credit card sized linux machiene - Raspberrypi</p>
 
                 <p>
-                    <small>A brief intro to Raspi , its capabilities and projects done with it.. with a small demo (
-                        Already registered for previous meet which i could not attend )
+                    <small>A brief intro to Raspi , its capabilities and projects done with it.. with a small demo
                     </small>
                 </p>
                 <p>
