Fixed the content issue

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                 <p>Building a distributed crawling engine using Scala and Akka</p>
 
                 <p>
-                    <small>Crawl millions of products from hundreds of e-commerce web sites to provide product and
-                        pricing intelligence to product managers
+                    <small>At Indix, we crawl millions of products from hundreds of e-commerce web sites to provide product and
+                        pricing intelligence to product managers. The talk will mainly focus on how we addressed most of the challenges faced in building such a system using the Akka framework
                     </small>
                 </p>
                 <p>
