--- a/nov2013.html
+++ b/nov2013.html
@@ -214,7 +214,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>A credit card sized linux machiene - Raspberrypi</p>
+                <p>A credit card sized linux machine - Raspberrypi</p>
 
                 <p>
                     <small>A brief intro to Raspi , its capabilities and projects done with it.. with a small demo
