--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Session 1</p>
+                <p>Raymarching Distance Fields</p>
 
                 <p>
-                    <small>
+                    <small>Ashok Gowtham
                     </small>
                 </p>
                 <p>
@@ -212,10 +212,10 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-2"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Session 2</p>
+                <p>Engineering eCommerce systems for scale</p>
 
                 <p>
-                    <small>
+                    <small>Vivek Venugopal
                     </small>
                 </p>
                 <p>
@@ -251,10 +251,10 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-4"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Session 3</p>
+                <p>Data Crunchin Using R</p>
 
                 <p>
-                    <small>
+                    <small>Saravanan P S & Agalya Loganathan
                     </small>
                 </p>
                 <p>
