--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <p>Engineering eCommerce systems for scale</p>
 
                 <p>
-                    <small>Vivek Venugopal
+                    <small>Vivek Venugopalan
                     </small>
                 </p>
                 <p>
