--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="large-8 columns summary" data-anchor-target="#agenda-1"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p>Raymarching Distance Fields</p>
+                <p>Raymarching Distance Fields - Using Pixel Shaders</p>
 
                 <p>
                     <small>Ashok Gowtham
