--- a/aug2013.html
+++ b/aug2013.html
@@ -283,7 +283,7 @@
     <div class="fixed">
         <nav class="top-bar">
             <ul class="title-area">
-                <li class="name"><h1><a href="./">Geek Night Chennai &raquo; <span>Nov 28</span></a></h1></li>
+                <li class="name"><h1><a href="./">Geek Night Chennai &raquo; <span>Jan 30</span></a></h1></li>
                 <li class="toggle-topbar menu-icon"><a href="#"></a></li>
             </ul>
             <section class="top-bar-section">
@@ -295,14 +295,14 @@
                 <ul class="right">
                     <li>
                     
-                        <a href="http://info.thoughtworks.com/GeekNight-Chennai-November-28-Attendee-Registration.html" target="_blank" rel="nofollow"
+                        <a href="http://info.thoughtworks.com/GeekNight-Chennai-December-19-Attendee-Registration.html" target="_blank" rel="nofollow"
                            onclick="ga('send', 'event', 'participate', 'participate')">
                             Participate
                         </a>
                     
                     </li>
                     <li>
-                        <a href="http://info.thoughtworks.com/GeekNight-Chennai-November-28-Speaker-Registration.html" target="_blank" rel="nofollow"
+                        <a href="http://info.thoughtworks.com/GeekNight-Chennai-December-19-Speaker-Registration.html" target="_blank" rel="nofollow"
                            onclick="ga('send', 'event', 'talk', 'talk')">
                             Talk
                         </a>
@@ -340,13 +340,16 @@
 
     <!-- Google Analytics -->
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-44837835-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; 
 
-      ga('create', 'UA-44837835-1', 'twchennai.github.io');
-      ga('send', 'pageview');
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
     </script>
   </body>
 </html>
