--- a/generator/content/dec.html
+++ b/generator/content/dec.html
@@ -1,6 +1,6 @@
 ---
-start: 2014-1-30 17:30
-edition: 7
+start: 2013-12-19 17:30
+edition: 6
 talk: "http://info.thoughtworks.com/GeekNight-Chennai-December-19-Speaker-Registration.html"
 participate: "http://info.thoughtworks.com/GeekNight-Chennai-December-19-Attendee-Registration.html"
 agenda:
@@ -9,19 +9,19 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: "Session 1"
-    subtitle: "(not yet decided)"
+    title: "Raymarching Distance Fields - Using Pixel Shaders"
+    speaker: "Ashok Gowtham"
   -
     time: "6:45"
-    title: "Session 2"
-    subtitle: "(not yet decided)"
+    title: "Engineering eCommerce systems for scale"
+    speaker: "Vivek Venugopalan"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
-    title: "Session 3"
-    subtitle: "(not yet decided)"
+    title: "Data Crunchin Using R"
+    speaker: "Saravanan P S &amp; Agalya Loganathan"
   -
     time: "8:30"
     title: "Ad-hoc"
