--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -9,19 +9,38 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: "Session 1"
-    subtitle: "(not yet decided)"
+    title: "Building a Fault Tolerant Architecture"
+    subtitle: "for a World Leader in Consumer Electronics"
+    speaker: "Velmurugan Srinivasan"
+    profile: "mailto:vsrinivasan@altimetrik.com"
   -
-    time: "6:45"
-    title: "Session 2"
-    subtitle: "(not yet decided)"
+    time: "6:35"
+    title: "Testing Challenges in Big Data Applications"
+    subtitle: "Experiences and solutions at Indix when collecting billions of data daily"
+    speaker: "Rajesh Mupalla"
+    profile: "mailto:rajesh@indix.com"
   -
-    time: "7:30"
+    time: "7:10"
     title: Break
   -
-    time: "7:45"
-    title: "Session 3"
-    subtitle: "(not yet decided)"
+    time: "7:20"
+    title: "AngularJS"
+    subtitle: "A JavaScript framework for developing great single-page web applications"
+    speaker: "Rajkumar Rathi"
+    profile: "mailto:rajsharp@gmail.com"
+  -
+    time: "7:55"
+    title: "ThoughtWorks Tech Radar"
+    subtitle: "Exploring the current state of technology"
+    speaker: "Various ThoughtWorkers"
+    profile: "mailto:geeknight.chennai@thoughtworks.com"
+    resources:
+      -
+        title: "Tech Radar"
+        url: "http://www.thoughtworks.com/radar"
+      -
+        title: "Background by Martin Fowler"
+        url: "http://martinfowler.com/articles/radar-faq.html"
   -
     time: "8:30"
     title: "Ad-hoc"
