Archive current geek night

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -43,8 +43,8 @@ agenda:
         url: "http://martinfowler.com/articles/radar-faq.html"
   -
     time: "8:30"
-    title: "Ad-hoc"
-    subtitle: "(will be any of pecha kucha / 15min / 30min / open floor talks)"
+    title: "Discussion"
+    subtitle: "on the ThoughtWorks Tech Radar"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
