--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,50 +1,31 @@
 ---
-start: 2014-1-30 17:30
-edition: 7
-talk: "http://info.thoughtworks.com/GeekNight-Chennai-January-30-Speaker-Registration.html"
-participate: "http://info.thoughtworks.com/GeekNight-Chennai-January-30-Attendee-Registration.html"
+start: 2014-2-27 17:30
+edition: 8
+#talk: ""
+#participate: ""
 agenda:
   -
     time: "5:45"
     title: Welcome Note
   -
     time: "6:00"
-    title: "Building a Fault Tolerant Architecture"
-    subtitle: "for a World Leader in Consumer Electronics"
-    speaker: "Velmurugan Srinivasan"
-    profile: "mailto:vsrinivasan@altimetrik.com"
+    title: "Talk 1"
+    subtitle: "(tbd)"
   -
-    time: "6:35"
-    title: "Testing Challenges in Big Data Applications"
-    subtitle: "Experiences and solutions at Indix when collecting billions of data daily"
-    speaker: "Rajesh Mupalla"
-    profile: "mailto:rajesh@indix.com"
+    time: "6:45"
+    title: "Talk 2"
+    subtitle: "(tbd)"
   -
-    time: "7:10"
+    time: "7:30"
     title: Break
   -
-    time: "7:20"
-    title: "AngularJS"
-    subtitle: "A JavaScript framework for developing great single-page web applications"
-    speaker: "Rajkumar Rathi"
-    profile: "mailto:rajsharp@gmail.com"
-  -
-    time: "7:55"
-    title: "ThoughtWorks Tech Radar"
-    subtitle: "Exploring the current state of technology"
-    speaker: "Various ThoughtWorkers"
-    profile: "mailto:geeknight.chennai@thoughtworks.com"
-    resources:
-      -
-        title: "Tech Radar"
-        url: "http://www.thoughtworks.com/radar"
-      -
-        title: "Background by Martin Fowler"
-        url: "http://martinfowler.com/articles/radar-faq.html"
+    time: "7:45"
+    title: "Talk 3"
+    subtitle: "(tbd)"
   -
     time: "8:30"
-    title: "Discussion"
-    subtitle: "on the ThoughtWorks Tech Radar"
+    title: "Ex Tempore"
+    subtitle: "Open floor discussion / Short talks / etc"
   -
     time: "9:00"
     title: "Networking &amp; Dinner"
