Added feb registration links

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,8 +1,8 @@
 ---
 start: 2014-2-27 17:30
 edition: 8
-#talk: ""
-#participate: ""
+talk: "http://info.thoughtworks.com/geeknight-chennai-february-27-speaker-registration.html"
+participate: "http://info.thoughtworks.com/geeknightchennai-february-27-attendee-registration.html"
 agenda:
   -
     time: "5:45"
