--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -9,19 +9,19 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: "Talk 1"
-    subtitle: "(tbd)"
+    title: "Native vs Hybrid Mobile Apps"
+    subtitle: "Senthil Kumar (Indix)"
   -
     time: "6:45"
-    title: "Talk 2"
-    subtitle: "(tbd)"
+    title: "Micro Services Architecture"
+    subtitle: "Thiyagu Palanisamy (ThoughtWorks)"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
-    title: "Talk 3"
-    subtitle: "(tbd)"
+    title: "Why we yield to javascript ?"
+    subtitle: "Bharani Subramaniam (ThoughtWorks)"
   -
     time: "8:30"
     title: "Ex Tempore"
