--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,27 +1,32 @@
 ---
-start: 2014-2-27 17:30
-edition: 8
-talk: "http://info.thoughtworks.com/geeknight-chennai-february-27-speaker-registration.html"
-participate: "http://info.thoughtworks.com/geeknightchennai-february-27-attendee-registration.html"
+start: 2014-3-27 17:30
+edition: 9
+talk: "http://info.thoughtworks.com/geeknightchennai-mar-27-attendee-registration.html"
+participate: "http://info.thoughtworks.com/geeknight-chennai-march-27-speaker-registration.html"
 agenda:
   -
     time: "5:45"
     title: Welcome Note
   -
     time: "6:00"
-    title: "Native vs Hybrid Mobile Apps"
-    subtitle: "Senthil Kumar (Indix)"
+    title: "Flexible Grids using SASS"
+    speaker: "Vinay Raghu (Enqos)"
+    profile: "https://plus.google.com/u/1/110433311887526268035/about"
+    image: "vinay-raghu.jpg"
   -
     time: "6:45"
-    title: "Micro Services Architecture"
-    subtitle: "Thiyagu Palanisamy (ThoughtWorks)"
+    title: "Hidden Depths of Google Apps Scripting"
+    speaker: "Patrick Martinent (NewGen)"
+    profile: "https://plus.google.com/u/1/+PatrickMartinent0"
+    image: "patrick-martinent.png"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
-    title: "Why we yield to javascript ?"
-    subtitle: "Bharani Subramaniam (ThoughtWorks)"
+    title: "Realtime Push Notifications in the Cloud"
+    speaker: "Pramod Nanduri (TweakMix)"
+    profile: "https://plus.google.com/u/1/+pramodnanduri/about"
   -
     time: "8:30"
     title: "Ex Tempore"
