--- a/generator/content/2014-03.html
+++ b/generator/content/2014-03.html
@@ -31,6 +31,7 @@ agenda:
     title: "Realtime Push Notifications in the Cloud"
     speaker: "Pramod Nanduri (TweakMix)"
     profile: "https://plus.google.com/u/1/+pramodnanduri/about"
+    image: "pramod-nanduri.jpg"
   -
     time: "8:30"
     title: "Ex Tempore"
