--- a/index.html
+++ b/index.html
@@ -34,14 +34,20 @@
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
                 <h1>Geek Night Chennai</h1>
+
                 <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
+
+                <h5 class="subheader">
+                    This Month's Theme: Workshop on Docker and Vagrant <br />
+                    <small>(Note: This month last thursday is election day, so scheduled on last Wednesday)</small>
+                </h5>
             </div>
         </div>
 
         <div class="row countdown">
             <div class="small-8 small-offset-2 large-4 large-offset-0 columns date">
                 <p>10<sup>th</sup> edition</p>
-                <h4>apr 24</h4>
+                <h4>apr 30</h4>
             </div>
             <div class="small-6 large-2 columns counter">
                 <h4><span id="days">&nbsp;</span></h4>
@@ -87,10 +93,10 @@
             <div class="large-5 columns talk">
                 
                     <a href="javascript:void(0)">
-                        <h4><strike>Talk</strike></h4>
+                        <h4><strike>Present</strike></h4>
                     </a>
                     <p>
-                        talks not yet open <br />
+                        presentations not yet open <br />
                         <small>(please check out in a few days)</small>
                     </p>
                 
@@ -383,7 +389,7 @@
     <div class="fixed">
         <nav class="top-bar">
             <ul class="title-area">
-                <li class="name"><h1><a href="./">Geek Night Chennai &raquo; <span>Apr 24</span></a></h1></li>
+                <li class="name"><h1><a href="./">Geek Night Chennai &raquo; <span>Apr 30</span></a></h1></li>
                 <li class="toggle-topbar menu-icon"><a href="#"></a></li>
             </ul>
             <section class="top-bar-section">
@@ -431,7 +437,7 @@
 </footer>
 
 
-    <script>window.targetDate = new Date(1398340800 * 1000)</script>
+    <script>window.targetDate = new Date(1398859200 * 1000)</script>
     <script src="js/ticker.js"></script>
 
     <script src="js/skrollr.min.js"></script>
