--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -7,19 +7,15 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: "Session 1"
-    subtitle: "(speaker not yet decided)"
-  -
-    time: "6:45"
-    title: "Session 2"
-    subtitle: "(speaker not yet decided)"
+    title: "Docker: Introduction and Workshop"
+    speaker: "Boojapathy (ThoughtWorks)"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
-    title: "Session 3"
-    subtitle: "(speaker not yet decided)"
+    title: "Introduction to Ansible"
+    subtitle: "Arvind Ram (ThoughtWorks)"
   -
     time: "8:30"
     title: "Ex Tempore"
