Added May Geek Night

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,21 +1,36 @@
 ---
-start: 2014-4-30 17:30
-edition: 10
+start: 2014-5-29 17:30
+edition: 11
+subheader: Continuous Integration and Delivery with Go
+subnote: Please bring your laptop installed with VirtualBox (4.3.4+) and Vagrant (1.4+)
+participate: "//info.thoughtworks.com/registration-page-geek-night-chennai-29-may-2014.html"
 agenda:
   -
     time: "5:45"
     title: Welcome Note
   -
     time: "6:00"
-    title: "Docker: Introduction and Workshop"
-    speaker: "Boojapathy (ThoughtWorks)"
+    title: "Introduction to Continuous Delivery"
+    speaker: "(ThoughtWorks)"
+  -
+    time: "6:45"
+    title: "Developing using Open Source Go"
+    speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
+    resources:
+      -
+        title: "Go CD"
+        url: "//go.cd"
   -
     time: "7:30"
     title: Break
   -
     time: "7:45"
-    title: "Introduction to Ansible"
-    subtitle: "Arvind Ram (ThoughtWorks)"
+    title: "Developing using Open Source Go (contd.)"
+    speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
+    resources:
+      -
+        title: "Go CD"
+        url: "//go.cd"
   -
     time: "8:30"
     title: "Ex Tempore"
