--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -1,8 +1,8 @@
 ---
 start: 2014-5-29 17:30
 edition: 11
-subheader: Continuous Integration and Delivery with Go
-subnote: Please bring your laptop installed with VirtualBox (4.3.4+) and Vagrant (1.4+)
+subheader: Continuous Integration and Delivery with focus on Open Source Go
+subnote: Please bring your laptop installed with VirtualBox (4.3.4+) and Vagrant (1.4+) for the Go Workshop <br /> Participants will be given a USB drive with Go installed
 participate: "//info.thoughtworks.com/registration-page-geek-night-chennai-29-may-2014.html"
 agenda:
   -
@@ -13,8 +13,8 @@ agenda:
     title: "Introduction to Continuous Delivery"
     speaker: "(ThoughtWorks)"
   -
-    time: "6:45"
-    title: "Developing using Open Source Go"
+    time: "6:30"
+    title: "Introduction to Open Source Go"
     speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
     resources:
       -
@@ -25,14 +25,14 @@ agenda:
     title: Break
   -
     time: "7:45"
-    title: "Developing using Open Source Go (contd.)"
+    title: "Go CD Workshop"
     speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
     resources:
       -
         title: "Go CD"
         url: "//go.cd"
   -
-    time: "8:30"
+    time: "9:00"
     title: "Ex Tempore"
     subtitle: "Open floor discussion / Short talks / etc"
   -
