--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -7,33 +7,28 @@ participate: "//info.thoughtworks.com/registration-page-geek-night-chennai-29-ma
 agenda:
   -
     time: "5:45"
-    title: Welcome Note
-  -
-    time: "6:00"
-    title: "Introduction to Continuous Delivery"
-    speaker: "(ThoughtWorks)"
-  -
-    time: "6:30"
-    title: "Introduction to Open Source Go"
+    title: "Introduction to Go"
+    subtitle: "Go is an open source continuous delivery tool"
     speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
     resources:
       -
         title: "Go CD"
         url: "//go.cd"
   -
-    time: "7:30"
-    title: Break
+    time: "6:45"
+    title: "Break"
   -
-    time: "7:45"
+    time: "7:00"
     title: "Go CD Workshop"
+    subtitle: "There will be two parallel workshops, one for Using Go, and one for Developing/Extending Go, participants are free to choose which one they want to attend"
     speaker: "Md Ali Ejaz, Srinivas Upadhya (ThoughtWorks)"
     resources:
       -
         title: "Go CD"
         url: "//go.cd"
   -
-    time: "9:00"
-    title: "Ex Tempore"
+    time: "8:30"
+    title: "Open Floor Discussion"
     subtitle: "Open floor discussion / Short talks / etc"
   -
     time: "9:00"
