--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -3,22 +3,29 @@ start: 2014-6-26 17:30
 edition: 12
 subheader: Anniversary edition
 subnote: Time to celebrate, recalibrate and geek out
+participate: "http://info.thoughtworks.com/geek-night-chennai-june-26-2014-registration.html"
+talk: "http://info.thoughtworks.com/geek-night-chennai-speaker-registration.html"
 agenda:
   -
     time: "5:45"
-    title: "TBD"
+    title: Welcome Note
+  -
+    time: "6:00"
+    title: "Software Design in the 21st Century"
+    subtitle: "Martin Fowler (Chief Scientist, ThoughtWorks)"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "TBD"
+    title: ""
+    subtitle: "Rohit (Founder & CEO, Tuplejump, Inc)"
+  -
+    time: "7:45"
+    title: "Mobile Payment"
+    subtitle: "Ramanathan (CTO, justpay.in)"
   -
     time: "8:30"
-    title: "Open Floor Discussion"
-    subtitle: "Open floor discussion / Short talks / etc"
-  -
-    time: "9:00"
     title: "Networking &amp; Dinner"
     subtitle: "(served free at our premises)"
 ---
