Fixing typo in juspay

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -23,7 +23,7 @@ agenda:
   -
     time: "7:45"
     title: "Mobile Payment"
-    subtitle: "Ramanathan (CTO, justpay.in)"
+    subtitle: "Ramanathan (CTO, juspay.in)"
   -
     time: "8:30"
     title: "Networking &amp; Dinner"
