Updated talks with Senthil's

--- a/generator/content/index.html
+++ b/generator/content/index.html
@@ -18,8 +18,8 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: ""
-    subtitle: "Rohit (Founder & CEO, Tuplejump, Inc)"
+    title: "Why should scala be your next programming language?"
+    subtitle: "Senthil V S & Aravindh S"
   -
     time: "7:45"
     title: "Mobile Payment"
