Sudhakar : Added speakers and participate list for july geeknight event

--- a/content/2014-07.html
+++ b/content/2014-07.html
@@ -1,24 +1,27 @@
 ---
 start: 2014-7-31 17:30
 edition: 13
-participate:
+participate: "http://info.thoughtworks.com/geek-night-chennai-july-31-2014-registration.html"
 talk: "http://info.thoughtworks.com/geek-night-chennai-speaker-registration.html"
 agenda:
   -
-    time: "5:45"
-    title: Welcome Note
-  -
     time: "6:00"
-    title: TBD
+    title: Dancing With R
+    subtitle: Come find out the good parts and the not so good parts which R brings to the table when it comes to number crunching
+    speaker: Simon R (ThoughtWorks)
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: TBD
+    title: Real Time Analytics - Platform Perspective
+    subtitle: Complex Event Processing (CEP) over event streams
+    speaker: Duraimurugan Rajamanickam (Cognizant)
   -
     time: "7:45"
-    title: TBD
+    title: on{X} - Android Automation
+    subtitle: "on{X} lets you control and extend the capabilities of your Android phone using a JavaScript API to remotely program it"
+    speaker: Abinash Bishoyo (TCS)
   -
     time: "8:30"
     title: "Networking & Dinner"
