Speaker spelling change

--- a/content/2014-07.html
+++ b/content/2014-07.html
@@ -21,7 +21,7 @@ agenda:
     time: "7:45"
     title: on{X} - Android Automation
     subtitle: "on{X} lets you control and extend the capabilities of your Android phone using a JavaScript API to remotely program it"
-    speaker: Abinash Bishoyo (TCS)
+    speaker: Abinash Bishoyi (TCS)
   -
     time: "8:30"
     title: "Networking & Dinner"
