Added scala workshop link

--- a/content/2014-07.html
+++ b/content/2014-07.html
@@ -3,6 +3,7 @@ start: 2014-7-31 17:30
 edition: 13
 participate: "http://info.thoughtworks.com/geek-night-chennai-july-31-2014-registration.html"
 talk: "http://info.thoughtworks.com/geek-night-chennai-speaker-registration.html"
+subnote: <a href="http://twchennai.github.io/scalaWorkshop">Scala Workshop on 04 - 07 Sep 14</a>
 agenda:
   -
     time: "6:00"
