Changed the July 2014 talk to reflect what really happened
Durai was not able to make it to the event. Boojapathy instead took session on ionic framework

--- a/content/2014-07.html
+++ b/content/2014-07.html
@@ -20,9 +20,9 @@ agenda:
     speaker: Abinash Bishoyi (TCS)
   -
     time: "7:45"
-    title: Real Time Analytics - Platform Perspective
-    subtitle: Complex Event Processing (CEP) over event streams
-    speaker: Duraimurugan Rajamanickam (Cognizant)
+    title: Ionic Framework
+    subtitle: Build responsive mobile apps using html, css & javascript with Ionic framework
+    speaker: Boojapathy (ThoughtWorks)
     
   -
     time: "8:30"
