--- a/content/2014-08.html
+++ b/content/2014-08.html
@@ -3,7 +3,7 @@ start: 2014-8-28 17:30
 edition: 14
 talk: "http://info.thoughtworks.com/geek-night-chennai-speaker-registration.html"
 subheader: "Cross Promo"
-subnote: "For interested folks, there is a separate <a href='http://twchennai.github.io/scalaWorkshop'>Scala Workshop</a> from 4th -7th September 2014"
+subnote: "For interested folks, there is a separate <a href='http://twchennai.github.io/scala'>Scala Workshop</a> from 4th -7th September 2014"
 agenda:
   -
     time: "5:45"
