Adding IST timezone in the content file to fix the counter

--- a/content/2014-08.html
+++ b/content/2014-08.html
@@ -1,5 +1,5 @@
 ---
-start: 2014-8-28 17:30
+start: 2014-8-28 17:30 IST
 edition: 14
 participate: "http://info.thoughtworks.com/geeknight-chennai-28aug2014-registration.html"
 talk: "http://info.thoughtworks.com/geek-night-chennai-speaker-registration.html"
