Modified Geeknight date and attached a form to submit ideas.

--- a/content/2014-09.html
+++ b/content/2014-09.html
@@ -1,4 +1,8 @@
 ---
-start: 2014-9-25 12:00 UTC
+start: 2014-9-26 12:00 UTC
 edition: 15
+subheader: "Hackathon"
+talk: "https://siliconsenthil.typeform.com/to/BYhKLP"
+subnote: >
+  This is gonna be a hackathon this time, hence Friday instead of Thursday.
 ---
