--- a/content/2014-09.html
+++ b/content/2014-09.html
@@ -1,8 +1,31 @@
 ---
 start: 2014-9-26 12:00 UTC
 edition: 15
-subheader: "Hackathon"
+subheader: "Its a Hackathon!"
 talk: "https://siliconsenthil.typeform.com/to/BYhKLP"
 subnote: >
-  This is gonna be a hackathon this time, hence Friday instead of Thursday.
+  <p>Starts on <b>Friday evening</b> and continues up to Saturday morning</p>
+
+  <h5>Bring your own Idea</h5>
+    <p>And form your own teams, or choose from...</p>
+  <h5>Ebola Task Force</h5>
+    <p>Help the Ebola Task Force in Western Africa to create frugal solutions such as Heat Map for Ebola hotline calls, etc</p>
+  <h5>BalaSwecha</h5>
+    <p>Frugal education solutions, like running Linux with a DE on old 128 MB systems, small class exercises modeled as software, etc</p>
+  <h5>TrueGifts</h5>
+    <p>A website for crowd-funded donations to small but achievable steps - like a day's food for an elder's home, books for a child, outing for an orphanage, etc</p>
+agenda:
+  -
+    time: "5:45 pm"
+    title: Welcome Note
+  -
+    time: "6:00 pm"
+    title: "Hackathon Kickstart"
+  -
+    time: "09:00 pm"
+    title: "Dinner"
+    subtitle: "(served free at our premises)"
+  -
+    time: "07:00 am"
+    title: "Showcase"
 ---
