Added Nov talks

--- a/content/2014-11.html
+++ b/content/2014-11.html
@@ -7,22 +7,24 @@ subnote:
 agenda:
   -
     time: "6:00"
-    title: Session 1
+    title: Introduction to Polymer and Polymer Designer Tool
     subtitle:
-    speaker:
+    speaker: Somasundaram M
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: Session 2
-    subtitle:
-    speaker:
+    title: Record, Revise, Revive
+    subtitle: How a tool can help to improve yourself continuously
+    speaker: Sudhakar R
+    profile: http://rsudhakar.in
   -
     time: "7:45"
-    title: Session 3
+    title: Submerge in Sublime
     subtitle:
-    speaker:
+    speaker: Ashok G
+    profile: https://github.com/ashokgowtham
   -
     time: "8:30"
     title: "Networking & Dinner"
