Nov talks changed order

--- a/content/2014-11.html
+++ b/content/2014-11.html
@@ -7,24 +7,24 @@ subnote:
 agenda:
   -
     time: "6:00"
-    title: Introduction to Polymer and Polymer Designer Tool
-    subtitle:
-    speaker: Somasundaram M
-  -
-    time: "6:45"
-    title: "Break"
-  -
-    time: "7:00"
     title: Record, Revise, Revive
     subtitle: How a tool can help to improve yourself continuously
     speaker: Sudhakar R
     profile: http://rsudhakar.in
   -
-    time: "7:45"
+    time: "6:45"
+    title: "Break"
+  -
+    time: "7:00"
     title: Submerge in Sublime
     subtitle:
-    speaker: Ashok G
+    speaker: Ashok Gowtham M
     profile: https://github.com/ashokgowtham
+  -
+    time: "7:45"
+    title: Introduction to Polymer and Polymer Designer Tool
+    subtitle:
+    speaker: Somasundaram M
   -
     time: "8:30"
     title: "Networking & Dinner"
