Nov 14 added profile link

--- a/content/2014-11.html
+++ b/content/2014-11.html
@@ -25,6 +25,7 @@ agenda:
     title: Introduction to Polymer and Polymer Designer Tool
     subtitle:
     speaker: Somasundaram M
+    profile: https://github.com/msomu
   -
     time: "8:30"
     title: "Networking & Dinner"
