Adding agenda for Feb 2015 edition

--- a/content/2015-02.html
+++ b/content/2015-02.html
@@ -10,20 +10,26 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: Presentation 1
-    subtitle: TBD
+    title: Embrace Functional Programming
+    subtitle: How to overcome the pitfalls of OO using functional programming
+    speaker: "Ashok Ramadoss & Magesh Kumar"
+    profile: https://www.linkedin.com/in/rashokk
   -
     time: "6:45"
-    title: "Break"
+    title: Captain Jack Sparrow's Google Car
+    subtitle: Evolution of Navigation
+    speaker: Raveen Beemsingh
+    profile: https://www.linkedin.com/in/raveenbeemsingh
   -
     time: "7:00"
-    title: Presentation 2
-    subtitle: TBD
+    title: "Break"
   -
-    time: "7:45"
-    title: Presentation 3
-    subtitle: TBD
+    time: "7:15"
+    title: Go Matha
+    subtitle: Introduction to 'Go' language
+    speaker: "Kavitha Rajagopalan, Arvind Ram Anantharam & Ramanathan Santhanam"
+    profile: https://www.linkedin.com/in/ramschennai
   -
-    time: "8:30"
+    time: "8:15"
     title: "Networking & Dinner"
 ---
