Removing the participant link

--- a/content/2015-02.html
+++ b/content/2015-02.html
@@ -1,7 +1,7 @@
 ---
 start: 2015-02-26 17:30
 edition: 17
-participate: "https://geeknight.typeform.com/to/SXspHG"
+participate:
 talk: "https://geeknight.typeform.com/to/eSknfl"
 subnote: Welcome to 2015!
 agenda:
