--- a/content/2015-03.html
+++ b/content/2015-03.html
@@ -10,13 +10,18 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: Talk1
+    title: Scripting Nginx with lua - OpenResty
+    speaker: "Bharani Subramaniam"
+    profile: https://www.linkedin.com/in/bharanisubramaniam
   -
     time: "7:00"
     title: "Break"
   -
     time: "7:15"
-    title: Talk2
+    title: Reactive application design
+    subtitle: Video talk by author of the book 'Reactive Application Development'. He is from Typesafe, Inc.
+    speaker: Duncan DeVore
+    profile: "https://www.linkedin.com/pub/duncan-devore/b/b28/745"
   -
     time: "8:15"
     title: "Networking & Dinner"
