Added profile url to Raj.

--- a/content/2015-04.html
+++ b/content/2015-04.html
@@ -11,7 +11,8 @@ agenda:
   -
     time: "6:00"
     title: "Web Components: Building Blocks Of The New Web"
-    speaker: "Rajasekharan Sundararaj, ThoughtWorks"
+    speaker: "Rajasekharan Sundararaj"
+    profile: http://twitter.com/nodesman
   -
     time: "6:45"
     title: "Break"
