changed speaker profile for megam.io

--- a/content/2015-05.html
+++ b/content/2015-05.html
@@ -19,8 +19,8 @@ agenda:
   -
     time: "7:00"
     title: Building A Cloud Management Platform Using Megam.io
-    speaker: "Kishorekumar Neelamegam"
-    profile: https://www.linkedin.com/in/kishorekumarneelamegam
+    speaker: "Yeshwanth Kumar"
+    profile: https://in.linkedin.com/in/yeshwanthk
   -
     time: "7:30"
     title: Why Haskell?
