Updated speaker details for june 2015

--- a/content/2015-06.html
+++ b/content/2015-06.html
@@ -10,9 +10,9 @@ agenda:
     title: Welcome Note
   -
     time: "6:00"
-    title: "TBA"
-    speaker: 
-    profile: 
+    title: "Scalable RDBMS via CDI and MyBatis"
+    speaker: "Giridhar Kannan"
+    profile: https://github.com/giridharkannan
   -
     time: "6:45"
     title: "Break"
