added youtube info for june 2015

--- a/content/2015-06.html
+++ b/content/2015-06.html
@@ -3,14 +3,11 @@ start: 2015-06-25 17:30
 edition: 21
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/223149916/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqy91GVkErUesfJbn_jzk_6q'>YouTube</a>."
 agenda:
   -
-    time: "5:45"
-    title: Welcome Note
-  -
     time: "6:00"
-    title: "Scalable RDBMS via CDI and MyBatis"
+    title: "<a href='https://www.youtube.com/watch?v=btDh8ctdfSs'>Scalable RDBMS via CDI and MyBatis</a>"
     speaker: "Giridhar Kannan"
     profile: https://github.com/giridharkannan
   -
@@ -18,12 +15,12 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: Effective use of JDBI
+    title: "<a href='https://www.youtube.com/watch?v=9dGLWKBaagI'>Effective use of JDBI</a>"
     speaker: "Manikandan Kumar"
     profile: https://www.linkedin.com/in/kmanikandan26
   -
     time: "7:30"
-    title: "iDepth: Life of a query in Postgres"
+    title: "<a href='https://www.youtube.com/watch?v=cM9Nvk32kq0'>iDepth: Life of a query in Postgres</a>"
     speaker: Varadharajan Mukundan
     profile: https://www.linkedin.com/pub/varadharajan-mukundan/17/b54/621
   -
