Updated talk title and other minor details

--- a/content/2013-10.html
+++ b/content/2013-10.html
@@ -11,7 +11,7 @@ agenda:
     title: "N Different Ways to Sync Data"
     speaker: "Selvakumar Natesan"
     profile: "//twitter.com/selvakn"
-    image: "selvakn.jpg"
+    image: "selvakn.jpeg"
     resources:
       -
         title: "Presentation"
