--- a/content/2015-07.html
+++ b/content/2015-07.html
@@ -10,14 +10,17 @@ agenda:
     title: "Microservices"
     speaker: "James Lewis"
     profile: https://uk.linkedin.com/pub/james-lewis/2/4b/5b1
+    image: "james-lewis.jpeg"
+
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "ECMAScript6"
+    title: "ECMAScript 6 & Using it today"
     speaker: "Selvakumar Natesan"
     profile: https://in.linkedin.com/in/selvakn
+    image: "selvakn.jpeg"
   -
     time: "7:30"
     title: "TBA"
