--- a/content/2015-07.html
+++ b/content/2015-07.html
@@ -3,7 +3,7 @@ start: 2015-07-30 17:45
 edition: 22
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/224047846/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqzVa0uHboMRkJHUyhEsyjNu' >YouTube</a>."
 agenda:
   -
     time: "6:00"
@@ -16,14 +16,14 @@ agenda:
     time: "6:45"
     title: "Break"
   -
-    time: "7:00"
+    time: "7:45"
     title: "ECMAScript 6 & Using it today"
     speaker: "Selvakumar Natesan"
     profile: https://in.linkedin.com/in/selvakn
     image: "selvakn.jpeg"
   -
     time: "7:30"
-    title: "TBA"
+    title: "Last Month in Tech"
   -
     time: "8:15"
     title: "Networking & Dinner"
