changed talk to reactive stream

--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -7,23 +7,20 @@ subnote: "This event was originally scheduled for July 30th. As it was declared 
 agenda:
   -
     time: "6:00"
-    title: "Microservices"
-    speaker: "James Lewis"
-    profile: https://uk.linkedin.com/pub/james-lewis/2/4b/5b1
-    image: "james-lewis.jpeg"
+    title: "ECMAScript 6 & Using it today"
+    speaker: "Selvakumar Natesan"
+    profile: https://in.linkedin.com/in/selvakn
+    image: "selvakn.jpeg"
 
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "ECMAScript 6 & Using it today"
-    speaker: "Selvakumar Natesan"
-    profile: https://in.linkedin.com/in/selvakn
-    image: "selvakn.jpeg"
-  -
-    time: "7:45"
-    title: "Last Month in Tech"
+    title: "Introduction to reactive streams"
+    speaker: "Mushtaq Ahmed"
+    profile: https://www.linkedin.com/pub/mushtaq-ahmed/0/76b/a0b
+    image: "musthaq.jpg"
   -
     time: "8:15"
     title: "Networking & Dinner"
