--- a/content/2015-08.html
+++ b/content/2015-08.html
@@ -8,8 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "ECMAScript 6 & Using it today"
-    speaker: "Selvakumar Natesan"
-    profile: https://in.linkedin.com/in/selvakn
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>, <a href='https://www.linkedin.com/pub/aruna-shanmuga-kumar/47/188/6a6'>Aruna Shanmuga Kumar</a>"
     image: "selvakn.jpeg"
 
   -
