added talks for september edition

--- a/content/2015-09.html
+++ b/content/2015-09.html
@@ -15,7 +15,12 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "TBA"
+    title: "So you think you know Java"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
+  -
+    time: "7:30"
+    title: "React Apps with a Brain"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/gauravagarwalr'>Gaurav Agarwal</a>"
   -
     time: "8:15"
     title: "Networking & Dinner"
