--- a/content/2015-09.html
+++ b/content/2015-09.html
@@ -3,11 +3,11 @@ start: 2015-09-23 17:45
 edition: 23
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/225395865/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxNdXC9xVJt2glDiO3MPrOH'>"
 agenda:
   -
     time: "6:00"
-    title: "Stayzilla : moving from a monolithic stack towards a microservice based architecture"
+    title: "<a href='https://www.youtube.com/watch?v=6vJyp0MeVXA'>Stayzilla : moving from a monolithic stack towards a microservice based architecture</a>"
     speaker_profile: "By: <a href='https://www.linkedin.com/in/arvsr1988'>Arvind Sridharan</a>"
 
   -
@@ -15,11 +15,11 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "So you think you know Java"
+    title: "<a href='https://www.youtube.com/watch?v=FXQBS6rH32s'>So you think you know Java</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
   -
     time: "7:30"
-    title: "React Apps with a Brain"
+    title: "<a href='https://www.youtube.com/watch?v=c-1miN1WZgo'>React Apps with a Brain</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/gauravagarwalr'>Gaurav Agarwal</a>"
   -
     time: "8:15"
