--- a/content/2015-09.html
+++ b/content/2015-09.html
@@ -3,7 +3,7 @@ start: 2015-09-23 17:45
 edition: 23
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/225395865/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxNdXC9xVJt2glDiO3MPrOH'>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxNdXC9xVJt2glDiO3MPrOH'>YouTube</a>."
 agenda:
   -
     time: "6:00"
