added 3rd talk for oct edition

--- a/content/2015-10.html
+++ b/content/2015-10.html
@@ -7,18 +7,19 @@ subnote: "This event will be live streamed on YouTube."
 agenda:
   -
     time: "6:00"
-    title: "Common blindspots on the Journey to Production beyond Continuous Delivery"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
+    title: "Building a global open Internet of Things data network"
+    speaker_profile: "By: <a href='https://nl.linkedin.com/in/wienke'>Wienke Giezeman</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
+    title: "Common blindspots on the Journey to Production beyond Continuous Delivery"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
+  -
+    time: "7:45"
     title: "Building low latency application"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
-  -
-    time: "7:30"
-    title: "TBA"
   -
     time: "8:15"
     title: "Networking & Dinner"
