--- a/content/2015-10.html
+++ b/content/2015-10.html
@@ -3,22 +3,22 @@ start: 2015-10-29 17:45
 edition: 24
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/226257327/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqx-AFH_juzYRokJa0l8twRn'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Building a global open Internet of Things data network"
+    title: "<a href='https://www.youtube.com/watch?v=7gogs96PA_k'>Building a global open Internet of Things data network</a>"
     speaker_profile: "By: <a href='https://nl.linkedin.com/in/wienke'>Wienke Giezeman</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "Common blindspots on the Journey to Production beyond Continuous Delivery"
+    title: "<a href='https://www.youtube.com/watch?v=gZxkx85vt18'>Common blindspots on the Journey to Production beyond Continuous Delivery</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
   -
     time: "7:45"
-    title: "Building low latency application"
+    title: "<a href='https://www.youtube.com/watch?v=5UHGpIIXM_U'>Building low latency application</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
   -
     time: "8:15"
