[Arun] added youtube link for nov 2015 edition

--- a/content/2015-11.html
+++ b/content/2015-11.html
@@ -3,24 +3,21 @@ start: 2015-11-26 17:45
 edition: 25
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/226966499/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyAVorI98__uowiGrNt_wdO'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "How to start hacking electronics"
+    title: "<a href='https://www.youtube.com/watch?v=CjX7jHCKDfY'>How to start hacking electronics</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/deepans'>Deepan Subramani</a>"
   -
     time: "6:45"
-    title: "Break"
-  -
-    time: "7:00"
-    title: "Let's <span style='text-decoration: line-through;'>talk</span> fly drones.."
+    title: "<a href='https://www.youtube.com/watch?v=sXEa8F8fKC4'>Let's <span style='text-decoration: line-through;'>talk</span> fly drones..</a>"
     speaker_profile: "By: Srini Vas"
   -
-    time: "7:45"
-    title: "IOTT - Keep an eye on TT table from your desk"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
+    time: "7:30"
+    title: "Break"
   -
-    time: "8:15"
-    title: "Networking & Dinner"
+    time: "7:45"
+    title: "<a href='https://www.youtube.com/watch?v=YD-kDwEm9Tc'>IoTT - Keep an eye on TT table from your desk</a>"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
 ---
