--- a/content/2015-12.html
+++ b/content/2015-12.html
@@ -3,20 +3,21 @@ start: 2016-01-07 17:45
 edition: 26
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/227675033/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqwGue3_-2PhSoLOed1q_SPs'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Kulir 100 Degree : Automating water heater"
-    speaker_profile: "By: Krishnaswamy Subramanian"
+    title: "<a href='https://www.youtube.com/watch?v=SNAe4zcmWho'>The Tweeting Tree</a>"
+    speaker_profile: "By: Nipun Kanade"
   -
     time: "6:45"
-    title: "TBA"
-  -
-    time: "7:30"
-    title: "Break"
-  -
-    time: "7:45"
     title: "<a href='https://www.youtube.com/watch?v=YD-kDwEm9Tc'>IoTT - Keep an eye on TT table from your desk</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
+  -
+    time: "7:15"
+    title: "Break"
+  -
+    time: "7:30"
+    title: "<a href='https://www.youtube.com/watch?v=34DI8xvSp2Y'>Kulir 100 Degree : Automating water heater</a>"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/krishnaswamy-subramanian-20359118'>Krishnaswamy Subramanian</a>"
 ---
