--- a/content/2016-01.html
+++ b/content/2016-01.html
@@ -3,19 +3,19 @@ start: 2016-01-28 17:45
 edition: 27
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/228327009/" 
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube</a>."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqwGue3_-2PhSoLOed1q_SPs'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Introduction to Elixir"
+    title: "<a href='https://www.youtube.com/watch?v=aPPaQF1aVw4'>Introduction to Elixir</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/avijayr'>Vijay Raghavan Aravamudhan</a>"
   -
     time: "6:45"
     title: "Break"
   -
     time: "7:00"
-    title: "Haskell & Functional Programming"
-    speaker_profile: "By: Karthikeyan Mani"
+    title: "<a href='https://www.youtube.com/watch?v=RIKI4BQ3rQ4'>Introduction to Haskell & it's roadblocks in learning</a>"
+    speaker_profile: "By: Sreenidhi Nair"
   -
     time: "8:15"
     title: "Networking & Dinner"
