[Arun] added resources for dec 2015 edition

--- a/content/2015-12.html
+++ b/content/2015-12.html
@@ -9,14 +9,28 @@ agenda:
     time: "6:00"
     title: "<a href='https://www.youtube.com/watch?v=SNAe4zcmWho'>The Tweeting Tree</a>"
     speaker_profile: "By: Nipun Kanade"
+    resources:
+      -
+        title: "Slide"
+        url: "http://slides.com/kanadenipun/iotree"
   -
     time: "6:45"
     title: "<a href='https://www.youtube.com/watch?v=YD-kDwEm9Tc'>IoTT - Keep an eye on TT table from your desk</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/arunkumarsundaramurthy'>Arun Kumar Sundaramurthy</a>"
+    resources:
+      -
+        title: "Slide"
+        url: "http://slides.com/arunkumarsundaramurthy/iott"
+      -
+        title: "Sample Codes"
+        url: "https://github.com/arunkumarsundaramurthy/geeknight-iott"
+      -
+        title: "IoTT-Code"
+        url: "https://github.com/TWChennai/IoTT"
   -
     time: "7:15"
     title: "Break"
-  -
+  -         
     time: "7:30"
     title: "<a href='https://www.youtube.com/watch?v=34DI8xvSp2Y'>Kulir 100 Degree : Automating water heater</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/krishnaswamy-subramanian-20359118'>Krishnaswamy Subramanian</a>"
