change the schedule and added youtube link for feb 2016

--- a/content/2016-02.html
+++ b/content/2016-02.html
@@ -3,23 +3,23 @@ start: 2016-02-25 17:45
 edition: 28
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/229043255/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqwKdMiOYWcxw_mBd7auW1ap'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Let us not REST"
-    speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
-  -
-    time: "6:45"
-    title: "Break"
-  -
-    time: "7:00"
-    title: "Introduction to Machine Learning"
+    title: "<a href='https://www.youtube.com/watch?v=O21pM5GBblA'>Introduction to Machine Learning</a>"
     speaker_profile: "By: Manish Shivanandhan"
   -
-    time: "7:30"
-    title: "Building Pied Piper, for real"
-    speaker_profile: "By: Swaathi Kakarla"
+    time: "6:30"
+    title: "<a href='https://www.youtube.com/watch?v=c1U5WniCEuA'>Building Pied Piper, for real</a>"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/swaathi-kakarla-65b304a3'>Swaathi Kakarla</a>"
+  -
+    time: "7:00"
+    title: "Break"
+  -
+    time: "7:15"
+    title: "<a href='https://www.youtube.com/watch?v=x6xisPV0OOY'>Let us not REST</a>"
+    speaker_profile: "By: <a href='https://in.linkedin.com/in/bharanisubramaniam'>Bharani Subramaniam</a>"
   -
     time: "8:00"
     title: "Networking & Dinner"
