--- a/content/2016-03.html
+++ b/content/2016-03.html
@@ -3,15 +3,15 @@ start: 2016-03-31 17:45
 edition: 29
 participate: "http://www.meetup.com/Chennai-Geek-Night/events/229764423/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyTcyr6lpCmnEEF8BrRmYx4'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Real Time Streaming with Kafka and Samza"
+    title: "<a href='https://www.youtube.com/watch?v=NNpqCFdy3iw'>Real Time Streaming with Kafka and Samza</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/ganeshpraburavi'>Ganesh Prabu Ravi</a>"
   -
     time: "6:30"
-    title: "Serverless Architecture"
+    title: "<a href='https://www.youtube.com/watch?v=EFgr5R7bfGg'>Serverless Architecture</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/selvakn'>Selvakumar Natesan</a>"
     image: "selvakn.jpeg"
   -
@@ -19,7 +19,7 @@ agenda:
     title: "Break"
   -
     time: "7:30"
-    title: "Pattern Matching and Recursion in Elixir"
+    title: "<a href='https://www.youtube.com/watch?v=jfWCyI-b17U'>Pattern Matching and Recursion in Elixir</a>"
     speaker_profile: "By: <a href='https://in.linkedin.com/in/dinesh-balasubramaniam-9663a298'>Dinesh Balasubramaniam</a>, <a href='https://in.linkedin.com/in/arunvelsriram'>Arunvel Sriram</a>"
   -
     time: "8:15"
